--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.firebaseui:firebase-ui-auth:3.1.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
 
     //FB Login
     implementation 'com.facebook.android:facebook-login:4.29.0'
@@ -49,6 +50,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
