--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,16 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
-            android:name=".ui.AddPostActivity"
+            android:name=".ui.addpost.AddPostActivity"
             android:label="@string/title_activity_add_post"
             android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ui.hbs.HbsActivity"
+            android:label="@string/title_activity_hbs"
+            android:theme="@style/AppTheme.NoActionBarHbs">
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
     </application>
 
 </manifest>
