--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'com.android.support:support-v4:27.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
 
     //Test
@@ -50,6 +51,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
 
 
 
