--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
-            android:name=".ui.addpost.AddPostActivity"
+            android:name=".ui.feed.AddPostActivity"
             android:label="@string/title_activity_add_post"
             android:parentActivityName=".MainActivity" />
         <activity
@@ -43,6 +43,10 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity
+            android:name=".ui.calendar.AddEventActivity"
+            android:label="@string/title_activity_add_event"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
