--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,6 +47,9 @@
             android:name=".ui.calendar.AddEventActivity"
             android:label="@string/title_activity_add_event"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".ui.calendar.EventDetailActivity"
+            android:label="@string/eventdetail_title"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
