--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'key0'
+            keyPassword 'capstone'
+            storeFile file('keystore_capstone.jks')
+            storePassword 'capstone'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "br.com.budismo.nikkyojers"
@@ -15,12 +23,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //Android Support
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
@@ -28,24 +37,19 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     //Firebase
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.firebaseui:firebase-ui-auth:3.1.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
-
     //FB Login
     implementation 'com.facebook.android:facebook-login:4.29.0'
-
     //3rd party
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     implementation 'com.android.support:support-v4:27.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
-
     //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
