--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".app.NikkyojersApplication">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,6 +35,7 @@
         <activity
             android:name=".ui.feed.AddPostActivity"
             android:label="@string/title_activity_add_post"
+            android:windowSoftInputMode="stateVisible"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ui.hbs.HbsActivity"
@@ -46,10 +48,22 @@
         <activity
             android:name=".ui.calendar.AddEventActivity"
             android:label="@string/title_activity_add_event"
+            android:windowSoftInputMode="stateVisible"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".ui.calendar.EventDetailActivity"
+        <activity
+            android:name=".ui.calendar.EventDetailActivity"
             android:label="@string/eventdetail_title"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
+
+        <receiver android:name=".widget.EventWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/event_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
